2006-11-07  Roman Kennke  <kennke@aicas.com>

	* gnu/javax/swing/text/html/parser/support/Parser.java
	(_handleText): Check if text content is actually allowed before
	passing empty text fragments on to the parser callbacks.

2006-11-07  Mark Wielaard  <mark@klomp.org>

	* gnu/java/net/protocol/jar/Handler.java (parseURL): Flatten jar
	path.
	(flat): New method.

2006-11-07  Tania Bento  <tbento@redhat.com>

	* java/awt/FlowLayout.java
	(getSize): If parent does not have a component, then a 
	different formula is used to calcuate the width.

2006-11-07  Roman Kennke  <kennke@aicas.com>

	* javax/swing/text/html/HTMLEditorKit.java
	(HTMLFactory.create): Include ListView.
	* javax/swing/text/html/ListView.java
	(paint): Removed comment.
	* javax/swing/text/html/StyleSheet.java
	(CSSStyle.priority): New field.
	(CSSStyle.CSSStyle(int)): New constructor with priority.
	(CSSStyle.compareTo): New method. Used for sorting the styles.
	(CSSStyleSheetParserCallback.declaration): Store the style
	with the complete selector.
	(ListPainter.attributes): Renamed as field.
	(ListPainter.styleSheet): New field.
	(ListPainter.type): New field.
	(ListPainter.ListPainter): Pass StyleSheet to constructor.
	(ListPainter.paint): Provide simplistic implementation.
	(getListPainter): Pass StyleSheet to constructor.
	(resolveStyle): Fixed CSS style resolving.

2006-11-07  Roman Kennke  <kennke@aicas.com>

	* gnu/javax/swing/text/html/css/BorderWidth.java:
	New class. Handles CSS border width values.
	* gnu/javax/swing/text/html/css/Length.java
	(floatValue): Made protected so that BorderWidth can access it.
	* javax/swing/text/html/CSS.java
	(Attribute.BORDER_BOTTOM_COLOR): New static field.
	(Attribute.BORDER_BOTTOM_STYLE): New static field.
	(Attribute.BORDER_LEFT_COLOR): New static field.
	(Attribute.BORDER_LEFT_STYLE): New static field.
	(Attribute.BORDER_RIGHT_COLOR): New static field.
	(Attribute.BORDER_RIGHT_STYLE): New static field.
	(Attribute.BORDER_TOP_COLOR): New static field.